tests/tagged_enum_field_outside_narrow_bad.stderr
tests/tagged_enum_field_outside_narrow_bad.hop:10:11: error: HOP2002: unknown identifier 'value'
