tests/tagged_enum_field_outside_narrow_bad.hop
// Verifies tagged enum field outside narrow is rejected.
enum Token u8 {
	End
	Int struct {
		value i32
	}
}

fn read(t Token) i32 {
	return t.value
}
